--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://songcengiz.github.io/ip-address-tracker",
   "name": "ip-address-tracker",
   "version": "0.1.0",
   "private": true,
